force-app/main/default/objects/Financing_Company__c/Financing_Company__c.object-meta.xml
<CustomObject>
    <description>The financing companies that a Dealer would use for their floorplan</description>
    <label>Financing Company</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financing Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>