force-app/main/default/objects/Financing_Company__c/fields/Account_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financing company&#39;s Dealer Account Rep</description>
    <label>Account Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financing Companies</relationshipLabel>
    <relationshipName>Financing_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>