force-app/main/default/objects/Financing_Company__c/fields/Dealer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account_Number__c</fullName>
    <label>Dealer Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>