force-app/main/default/objects/Financing_Company__c/fields/Financing_Company__c.field-meta.xml
<CustomField>
    <fullName>Financing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financing Companies (Financing Company)</relationshipLabel>
    <relationshipName>Financing_Companies1</relationshipName>
    <type>Lookup</type>
</CustomField>