force-app/main/default/objects/Financing_Company__c/fields/Regional_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Regional_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financing company&#39;s Regional Supervisor for the Dealer Account</description>
    <label>Regional Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financing Companies (Regional Supervisor)</relationshipLabel>
    <relationshipName>Financing_Companies1</relationshipName>
    <type>Lookup</type>
</CustomField>